fix: styles of scrollbar in docs page affects innner content

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -45,34 +45,34 @@ html {
       'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
       'Segoe UI Symbol';
   }
-}
 
-/* 浏览器滚动条 */
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
+  /* 浏览器滚动条 */
+  > ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
 
-::-webkit-scrollbar-corner,
-::-webkit-scrollbar-track {
-  background-color: #e2e2e2;
-}
+  > ::-webkit-scrollbar-corner,
+  > ::-webkit-scrollbar-track {
+    background-color: #e2e2e2;
+  }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 2px;
-  background-color: rgba(0, 0, 0, 0.3);
-}
+  > ::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 
-::-webkit-scrollbar-button:vertical {
-  display: none;
-}
+  > ::-webkit-scrollbar-button:vertical {
+    display: none;
+  }
 
-::-webkit-scrollbar-thumb:vertical:hover {
-  background-color: rgba(0, 0, 0, 0.35);
-}
+  > ::-webkit-scrollbar-thumb:vertical:hover {
+    background-color: rgba(0, 0, 0, 0.35);
+  }
 
-::-webkit-scrollbar-thumb:vertical:active {
-  background-color: rgba(0, 0, 0, 0.38);
+  > ::-webkit-scrollbar-thumb:vertical:active {
+    background-color: rgba(0, 0, 0, 0.38);
+  }
 }
 
 .icon {
@@ -122,10 +122,6 @@ html {
   background-color: @bkColor;
   min-height: 100vh;
 
-  .ant-anchor {
-    font-size: 1rem;
-  }
-
   .doc {
     display: flex;
     padding: 2rem;
@@ -141,23 +137,23 @@ html {
   }
 }
 
-.theme-dark {
+html[class*='theme-dark'] {
   .css-vars(true);
 
-  ::-webkit-scrollbar-corner,
-  ::-webkit-scrollbar-track {
+  > ::-webkit-scrollbar-corner,
+  > ::-webkit-scrollbar-track {
     background-color: rgb(15, 15, 15);
   }
 
-  ::-webkit-scrollbar-thumb {
-    background-color: #2d2d2d;
+  > ::-webkit-scrollbar-thumb {
+    background-color: #444;
   }
 
-  ::-webkit-scrollbar-thumb:vertical:hover {
+  > ::-webkit-scrollbar-thumb:vertical:hover {
     background-color: rgb(58, 58, 58);
   }
 
-  ::-webkit-scrollbar-thumb:vertical:active {
+  > ::-webkit-scrollbar-thumb:vertical:active {
     background-color: rgb(58, 58, 58);
   }
 
@@ -176,15 +172,6 @@ html {
         background-color: @bkColorDark;
       }
     }
-  }
-
-  .ant-dropdown-menu-dark {
-    background-color: @bkColorDark;
-    border: 1px solid @borderColorDark;
-  }
-
-  .ant-back-top {
-    color: @colorDark;
   }
 }
 
